welcome.lessons.welcome.bat.bool2.RedTicket.scala.error
redTicket:4: error: not found: value ||
	 else { if (a==b & b==c)||(( a!=b & a!=c))
                                ^